--- a/static/style.css
+++ b/static/style.css
@@ -181,6 +181,8 @@ main {
 	padding: 5px 10px;
 	outline: 0;
 	border: 0;
+	border-right: 2px solid rgba(0, 0, 0, 0.5);
+	margin-right: 1px;
 	min-width: 0;
 	background: #f9f9f9;
 }
