--- a/static/style.css
+++ b/static/style.css
@@ -684,7 +684,7 @@ ul#articles-list > li > h3, ul#articles-list > li > p {
 }
 
 ul#articles-list > li > p:nth-of-type(2) {
-	text-align: :right;
+	text-align: right;
 }
 
 /***** MENU PARAMETERS *****/
@@ -715,7 +715,7 @@ ul#articles-list > li > p:nth-of-type(2) {
 }
 
 .popover-display-false {
-	display: grid;
+	display: none;
 }
 
 .menu-popover>div:last-child, #wiki-popover-head,
